fixed detail container visibility

--- a/frontend/src/pages/image-search/image-search-styles.css
+++ b/frontend/src/pages/image-search/image-search-styles.css
@@ -128,7 +128,7 @@ input[type='submit']:active {
     visibility: hidden;
 }
 
-.image-detail-container.visible {
+.visible {
     visibility: visible;
 }
 
